# acm

./: .bumpversion.cfg  .env  .gitignore  .readthedocs.yaml  DOCUMENTATION_UPDATE_SUMMARY.md  HOSTING_INSTRUCTIONS.md  Makefile  README.md  Readme.md  VERSION  acm.estimators.galaxy_clustering.base.BaseEstimator.dot  acm.observables.base.Observable.dot  classes.dot  packages.dot  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-version.yml  check-version-label.yml  ci-format-lint-test.yml  ci-format-tests.yml  ci-tests.yml  ci-version-dev.yml  ci-version.yml
acm/: __init__.py
acm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
acm/catalogs/: backends.py  base.py  dataclasses.py  factories.py
acm/compression/: cca.py  greedy_fisher.py
acm/data/: control_plots.py  default.py  io_tools copy.py  io_tools.py  io_tools_xarray.py  paths.py
acm/data/emc/: paths.yaml  summaries.py
acm/estimators/: __init__.py  base.py  density_split.py  voxel_voids.py  wst.py
acm/estimators/galaxy_clustering/: Minkowski.py  __init__.py  base.py  bispectrum.py  cic.py  cumulants.py  density_split.py  jax_voxel_voids.py  jaxel_voids.py  jaxmf.py  knn.py  minkowski.py  mst.py  multiplets.py  polybin3d.py  pydive.py  spectrum.py  voxel_voids.py  wst.py
acm/estimators/weak_lensing/: __init__.py  base.py  correlation.py  density_split.py
acm/hod/: __init__.py  abacushod.py  abacushod.yaml  base.py  box.py  box.yaml  box_ELG.yaml  box_QSO.yaml  cutsky.py  footprint.py  lightcone.py  lightcone.yaml  lightcone_ELG.yaml  lightcone_QSO.yaml  old_cutsky.py  parameters.py  single_box_to_cutsky.py
acm/hod/Fiber_assignment/: Test_FA.ipynb  fiber_assignment.py
acm/hod/test/: multiple_boxes_to_cutsky.py  test_cutsky.py  test_lightcone.py
acm/lensing/: __init__.py  abacuslensing.py
acm/likelihoods/: __init__.py  base.py
acm/model/: __init__.py  optimize.py  train.py
acm/observables/: __init__.py  base.py  combined.py  data.py  model.py
acm/observables/bgs/: __init__.py  base.py  density_split_correlation.py  density_split_spectrum.py  dsc_conf.py  power_spectrum.py  tpcf.py  tpcf_module.py
acm/observables/emc/: __init__.py  ap_tpcf.py  base.py  bispectrum.py  bispectrum_module.py  combined.py  corrected_projected_tpcf.py  cumulants.py  dd_knn.py  dd_knn_module.py  delaunay_voids.py  density_split_correlation.py  density_split_module.py  density_split_power.py  minkowski.py  (+25 more)
acm/samplers/: __init__.py  base.py  nested.py
acm/src/: jozov-grid.c  setup.py
acm/tests/: inference_abacus_new.py  inference_abacus_newclass.py  readme.md
acm/utils/: __init__.py  abacus.py  catalogs_safety_checks.py  compression.py  control_plots.py  covariance.py  decorators.py  default.py  logging.py  modules.py  parser.py  plotting.py  tools.py  xarray.py  xarray_data.py
docs/: API_LIMITATIONS.md  README.md  WIP.md  conf.py  index.md  installation.md  requirements.txt
docs/code/: acm.md  data.md  io.md  overview.md  projects.md  sunbird.md  utils.md
docs/credits/: citations.md  contributors.md  dependencies.md
docs/notebooks/: densitysplit.ipynb  observables.ipynb  summary_coords.ipynb
docs/pipeline/: data.md  emulator.md  galaxy_halo.md  inference.md  overview.md  statistics.md
docs/source/: acm.data.md  acm.estimators.md  acm.hod.md  acm.model.md  acm.observables.md  acm.utils.md  api.md
docs/statistics/: densitysplit.md  mst.md
nb/: README.md  abacushod_examples.ipynb  bispectrum_examples.ipynb  covariance_examples.ipynb  density_split_examples.ipynb  densitysplit_examples.ipynb  dtsphere_examples.ipynb  emc_priors.ipynb  greedy_fisher.ipynb  hod_examples.ipynb  inference_with_compression.ipynb  knn_exmaples.ipynb  minkowski_examples.ipynb  multiplets_examples.ipynb  observables_example.ipynb  posterior_predictive_checks.ipynb  power_spectrum_examples.ipynb  tpcf_likelihood_gaussianity.ipynb  wst_examples.ipynb
nb/.ipynb_checkpoints/: dtsphere_examples-checkpoint.ipynb  knn_exmaples-checkpoint.ipynb  voxelvoids_examples-checkpoint.ipynb
projects/bgs/: README.md
projects/cai/: Untitled.ipynb  cic_desi_y1.py  cic_ezmocks.py  cic_uchuu.ipynb  cic_uchuu.py  cic_uchuu_v0.py  recon_mocks.py
projects/desi/: cutsky.ipynb  cutsky.py  fibers_cic.ipynb  fibers_cic.py  fibre_assign_measurements.py  generate_summit_subsamples.sh  lightcone.ipynb  lightcone.py  multiple_boxes_to_cutsky.py  wisdom.shape-684-1058-663.type-float64.nthreads-128.npy  wisdom.shape-684-1058-663.type-float64.nthreads-256.npy
projects/emc/: compress_diffsky.py  compress_files.py  compress_files_cosmohod.py  cumulants.py  density_split.py  density_split.sh  density_split_abacus_small.py  dsc_abacus_cosmo+hod.sh  emulate_number_density.py  find_best_hod.py  generate_hods.py  io_tools.py  sample_posterior.py  sample_posterior_combined.py  sample_posterior_cosmohod.py  test_bispectrum.py  test_combined.py  test_newclass.py  test_pk.py  test_wst.py  test_xarray.py  tpcf_abacus.py  train_tpcf.py  train_wp.py  wp_abacuys_small.py  xi_emulator.py
projects/transformer/: Untitled.ipynb  transformer.py
projects/y1/: ds_abacus_lightcone.yaml  prepare_sim.ipynb
quality/: .gitignore  acm_clean_output.sh  acm_clean_report.sh  acm_format_file.sh  acm_lint.sh  acm_lint_fix_file.sh  acm_pylint_slow.sh  acm_quality_init.sh  acm_tests.sh  acm_type.sh  pylint.conf  readme.md  requirements.txt  ruff.toml  settings.json
scripts/: README.md
scripts/bgs/: README.md
scripts/dr2/: abacus_hf.py
scripts/eft/: contours_lcdm.py  inference_folps.py
scripts/emc/: run_knn.py
tests/: README.md  conftest.py  test_abacushod.py  test_backends.py  test_bispectrum.py  test_covariance.py  test_ds_mpi.py  test_estimators_box.py  test_estimators_survey.py  test_minkowski.py  test_wst.py  test_wst_box.py  test_wst_survey.py
tests/compression/: test_cca_compression.py  test_greedy_fisher.py
tests/data/: .gitignore  README.md
tests/scripts/: README.md  test_create_compressed_v13_from_v12.py  test_create_measurement_symlinks.py  test_optimize_sunbird.py  test_train_sunbird.py
(+471 files in other folders)
