[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "cython",
    "numpy < 2.0.0", # Avoid numpy 2.0.0 for now for type errors in Cython
]
build-backend = "setuptools.build_meta"


[project]
name = "acm"
description = "Alternative Clustering Methods"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [ # Base requirements
    "numpy",
    "scipy",
    "pandas", 
    "xarray", 
    "pyyaml",
    "matplotlib",
    "getdist",
]
dynamic = ["version"]


[project.optional-dependencies]
# Environements
cosmodesi = [
    # Estimators
    'jax',
    'pycorr[mpi,jackknife,corrfunc] @ git+https://github.com/cosmodesi/pycorr',

    # HOD and cutsky
    'astropy',
    'abacusutils',  # abacusnbody
    'cosmoprimo[class,camb,astropy,extras] @ git+https://github.com/cosmodesi/cosmoprimo',
    'mockfactory @ git+https://github.com/cosmodesi/mockfactory',
    'fitsio',
    'healpy',
    'desitarget',
    'regressis @ git+https://github.com/echaussidon/regressis',
]
# Estimators (backends)
jaxpower = [
    'jax-power @ git+https://github.com/adematti/jax-power.git',
]
pypower = [
    'pypower @ git+https://github.com/cosmodesi/pypower', 
]
pyrecon = [
    'pyrecon @ git+https://github.com/cosmodesi/pyrecon@main',
]
polybin3d = [
    'polybin3d[mkl_fft] @ git+https://github.com/oliverphilcox/PolyBin3D',
]
# Documentation and testing
docs = [
    "sphinx >= 4.2",
    "sphinx-book-theme >= 0.3",
    "myst_nb >= 0.17.1",
]
testing = [
    "pytest",
    "coverage",
    "pytest-docstyle",
    "pytest-emoji",
    "pylint",
    "ruff",
    "black",
    "isort",
    "mypy",
    "ciqar",
    "ty",
    "pytest-cov"
]
# Estimators
knn = [
    "numba",
]
mst = [
    "mistreeplus @ git+https://github.com/knaidoo29/mistreeplus.git",
]
wst = [
    "kymatio",
]
# Model & inference
sunbird = [ 
    'sunbird[inference] @ git+https://github.com/florpi/sunbird',
]
lensing = [
    'asdf',
    'treecorr',
]


[project.urls]
Repository = "https://github.com/epaillas/acm.git"
Documentation = "https://acm.readthedocs.io"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
packages = ["acm"]


[tool.setuptools.package-data]
acm = [
    "**/*.yml",
    "**/*.yaml",
]

[[tool.ty.overrides]]
include = [
    "acm/hod/box.py",
    "acm/hod/cutsky.py",
    "acm/hod/footprint.py",
    "acm/hod/lightcone.py",
    "acm/hod/parameters.py",
    "acm/estimators/galaxy_clustering/base.py",
    "acm/estimators/galaxy_clustering/cic.py",
    "acm/estimators/galaxy_clustering/cumulants.py",
    "acm/estimators/galaxy_clustering/density_split.py",
    "acm/estimators/galaxy_clustering/jaxel_voids.py",
    "acm/estimators/galaxy_clustering/jaxmf.py",
    "acm/estimators/galaxy_clustering/knn.py",
    "acm/estimators/galaxy_clustering/minkowski.py",
    "acm/estimators/galaxy_clustering/mst.py",
    "acm/estimators/galaxy_clustering/multiplets.py",
    "acm/estimators/galaxy_clustering/polybin3d.py",
    "acm/estimators/galaxy_clustering/pydive.py",
    "acm/estimators/galaxy_clustering/spectrum.py",
    "acm/estimators/galaxy_clustering/voxel_voids.py",
    "acm/estimators/galaxy_clustering/wst.py",
    "acm/estimators/galaxy_clustering/backends/jaxpower.py",
    "acm/estimators/galaxy_clustering/backends/pypower.py",
    "acm/estimators/galaxy_clustering/backends/pyrecon.py",
    "acm/lensing/abacuslensing.py",
    "acm/observables/emc/*_module.py",
    "acm/observables/bgs/tpcf_module.py",
    "acm/observables/bgs/density_split_correlation.py",
]

[tool.ty.overrides.rules]
all = "ignore"

[[tool.ty.overrides]]
include = [
    "acm/estimators/weak_lensing/correlation.py",
    "acm/observables/base.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::",  # ignore deprecations from all modules
    "default::DeprecationWarning:mymodule.*:",  # except from mymodule
]
