[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "cython",
    "numpy < 2.0.0", # Avoid numpy 2.0.0 for now for type errors in Cython
]
build-backend = "setuptools.build_meta"


[project]
name = "acm"
description = "Alternative Clustering Methods"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [ # Base requirements
    "numpy",
    "scipy",
    "pandas", 
    "xarray", 
    "pyyaml",
    "matplotlib",
    "getdist",
]
dynamic = ["version"]

[project.optional-dependencies]
# Environements
cosmodesi = [
    # Estimators
    'jax',
    'pycorr[mpi,jackknife,corrfunc] @ git+https://github.com/cosmodesi/pycorr',

    # HOD and cutsky
    'astropy',
    'abacusutils',  # abacusnbody
    'cosmoprimo[class,camb,astropy,extras] @ git+https://github.com/cosmodesi/cosmoprimo',
    'mockfactory @ git+https://github.com/cosmodesi/mockfactory',
    'fitsio',
    'healpy',
    'desitarget',
    'regressis @ git+https://github.com/echaussidon/regressis',
]
# Estimators (backends)
jaxpower = [
    'jax-power @ git+https://github.com/adematti/jax-power.git',
]
pypower = [
    'pypower @ git+https://github.com/cosmodesi/pypower', 
]
pyrecon = [
    'pyrecon @ git+https://github.com/cosmodesi/pyrecon@main',
]
polybin3d = [
    'polybin3d[mkl_fft] @ git+https://github.com/oliverphilcox/PolyBin3D',
]
# Documentation and testing
docs = [
    "sphinx >= 4.2",
    "sphinx-book-theme >= 0.3",
    "myst_nb >= 0.17.1",
]
testing = [
    "pytest",
    "coverage",
    "pytest-docstyle",
    "pytest-emoji",
    "pylint",
    "ruff",
    "black",
    "isort",
    "mypy",
    "ciqar",
    "ty",
    "pytest-cov"
]
# Estimators
knn = [
    "numba",
]
mst = [
    "mistreeplus @ git+https://github.com/knaidoo29/mistreeplus.git",
]
wst = [
    "kymatio",
]
# Model & inference
sunbird = [ 
    'sunbird[inference] @ git+https://github.com/florpi/sunbird',
]
lensing = [
    'asdf',
    'treecorr',
]

[project.urls]
Repository = "https://github.com/epaillas/acm.git"
Documentation = "https://acm.readthedocs.io"


# Setuptools settings
[tool.setuptools]
packages = ["acm"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
acm = [
    "**/*.yml",
    "**/*.yaml",
]


# Pytest settings
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::",  # ignore deprecations from all modules
    "default::DeprecationWarning:mymodule.*:",  # except from mymodule
]


# Ty settings
[tool.ty.rules]
unresolved-import = "ignore" # Ignore unresolved imports, as some dependencies may not be installed in all environments.
invalid-method-override = "warn" # Warn about invalid method overrides, as some may be intentional due to limitations in type checking.


# Ruff settings
[tool.ruff]
line-length = 88
output-format = "grouped"
respect-gitignore = true
show-fixes = true
exclude = [
    "acm/hod/*", # Temporarily exclude HOD module, pending rework
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "AIR",      # Airflow
    "CPY",      # flake8-copyright
    "EM",       # flake8-errmsg
    "FA",       # flake8-future-annotations
    "FAST",     # FastAPI
    "FBT",      # flake8-boolean-trap
    "FIX",      # flake8-fixme
    "G",        # flake8-logging-format
    "PGH",      # pygrep-hooks
    "TD",       # flake8-todos
    "YTT",      # flake8-2020

    # can't fix now:
    "C90",      # functions too complex
    "PLR09",    # Too many ... in function/method signature

    # To Be Discussed:
    "TC",       # Type-checking
    "C408",     # Unnecessary dict/list call
    "D100",     # Missing docstring in public module
    "PLR2004",  # Magic value used in comparison

    # I don't like it:
    "PD011",    # Checks for uses of .values on Pandas Series and Index objects.
    "RET504",   # Return statements should not contain assignment expressions

    # don't care about these:
    "ERA",      # Found commented-out code
    "SLF",      # Private member accessed
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "N806",     # variable in function should be lowercase
    "S307",     # Use of potentially insecure function
    "S311",     # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "TRY003",   # Avoid specifying long messages outside the exception class

    # actually makes code harder to read:
    "B006",     # Do not use mutable data structures for argument defaults
    "D203",     # 1 blank line required before class docstring
    "PT003",    # scope='function' is implied in @pytest.fixture()
    "SIM105",   # Use contextlib.suppress() instead of try-except-pass
    "SIM108",   # Use ternary operator instead of if-else-block
    "TRY003",   # Avoid specifying long messages outside the exception class
    "UP015",    # Unnecessary mode argument

    # disable these rules to use the ruff formatter.
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # docstring-tab-indentation
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "E501",     # line-too-long
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]
fixable = ["ALL"]
unfixable = ["F541"] # Disable F541 because can produce wrong fix with latex

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # suppress ANN401 for *args and **kwargs

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py, as they are often used for package exports.